Bug 586408 document.popup node doesn't work with nested popups (regression from bug 383930) r=Enn a=beltzner